--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project boilerplate",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "publish": "npm run build && now --static",
+    "publish": "npm run build && now",
     "start": "webpack-dev-server --content-base build/ --port 5050"
   },
   "dependencies": {
