Split up code into several files, add old versions

--- a/now.json
+++ b/now.json
@@ -8,5 +8,10 @@
     "README.md",
     "LICENSE.txt"
   ],
+  "static": {
+    "rewrites": [
+      { "source": "**", "destination": "/index.html" }
+    ]
+  },
   "type": "static"
 }
