--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "moment": "^2.20.1",
     "normalize.css": "7.0.0",
     "react": "16.2.0",
-    "react-dom": "^16.12.0",
-    "react-popover": "0.5.4"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
